force-app/main/default/objects/Property__c/Property__c.object-meta.xml
<CustomObject>
    <description>Publicly listable real estate property managed in Salesforce.</description>
    <label>Property</label>
    <nameField>
        <displayFormat>PROP-{00000}</displayFormat>
        <label>Property #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Properties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>