force-app/main/default/objects/Property__c/fields/Area_Sq_Ft__c.field-meta.xml
<CustomField><fullName>Area_Sq_Ft__c</fullName><description>Property area in square feet.</description><inlineHelpText>Used for public comparison and filtering.</inlineHelpText><label>Area Sq Ft</label><precision>8</precision><required>false</required><scale>0</scale><type>Number</type><unique>false</unique></CustomField>