force-app/main/default/objects/Property__c/fields/Bathrooms__c.field-meta.xml
<CustomField><fullName>Bathrooms__c</fullName><description>Number of bathrooms.</description><inlineHelpText>Shown on public property details.</inlineHelpText><label>Bathrooms</label><precision>3</precision><required>false</required><scale>1</scale><type>Number</type><unique>false</unique></CustomField>