force-app/main/default/objects/Property__c/fields/Bedrooms__c.field-meta.xml
<CustomField><fullName>Bedrooms__c</fullName><description>Number of bedrooms.</description><inlineHelpText>Shown on residential public listings.</inlineHelpText><label>Bedrooms</label><precision>2</precision><required>false</required><scale>0</scale><type>Number</type><unique>false</unique></CustomField>