force-app/main/default/objects/Property__c/fields/Description__c.field-meta.xml
<CustomField><fullName>Description__c</fullName><description>Public marketing description for the listing.</description><inlineHelpText>Shown on the public property detail page.</inlineHelpText><label>Description</label><length>32768</length><required>false</required><type>LongTextArea</type><visibleLines>5</visibleLines></CustomField>