force-app/main/default/objects/Property__c/fields/End_Date_Time__c.field-meta.xml
<CustomField><fullName>End_Date_Time__c</fullName><description>Listing or appointment availability end date/time.</description><inlineHelpText>When provided, must be at least one day after the start date/time.</inlineHelpText><label>End Date/Time</label><required>false</required><trackHistory>true</trackHistory><type>DateTime</type></CustomField>