force-app/main/default/objects/Property__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <description>Repeat frequency for recurring property schedules.</description>
    <inlineHelpText>Required when Recurring is checked; must be blank otherwise.</inlineHelpText>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted>
        <value><fullName>Yearly</fullName><default>false</default><label>Yearly</label></value>
        <value><fullName>Monthly</fullName><default>false</default><label>Monthly</label></value>
        <value><fullName>Daily</fullName><default>false</default><label>Daily</label></value>
    </valueSetDefinition></valueSet>
</CustomField>