force-app/main/default/objects/Property__c/fields/Image_URL__c.field-meta.xml
<CustomField><fullName>Image_URL__c</fullName><description>Primary public image URL.</description><inlineHelpText>Displayed as the listing cover image.</inlineHelpText><label>Image URL</label><required>false</required><type>Url</type></CustomField>