force-app/main/default/objects/Property__c/fields/Location__c.field-meta.xml
<CustomField><fullName>Location__c</fullName><deleteConstraint>SetNull</deleteConstraint><description>Physical location of the property.</description><inlineHelpText>Required when the property type is Sell.</inlineHelpText><label>Location</label><referenceTo>Location__c</referenceTo><relationshipLabel>Properties</relationshipLabel><relationshipName>Properties</relationshipName><required>false</required><trackHistory>true</trackHistory><type>Lookup</type></CustomField>