force-app/main/default/objects/Property__c/fields/Location_Verified__c.field-meta.xml
<CustomField><fullName>Location_Verified__c</fullName><description>Shows whether the related location is verified.</description><formula>Location__r.Verified__c</formula><formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs><inlineHelpText>Derived from the related Location record.</inlineHelpText><label>Location Verified</label><type>Checkbox</type></CustomField>