force-app/main/default/objects/Property__c/fields/Manager__c.field-meta.xml
<CustomField><fullName>Manager__c</fullName><description>Manager who owns the property lifecycle.</description><inlineHelpText>Required manager for notifications and operational ownership.</inlineHelpText><label>Manager</label><referenceTo>Manager__c</referenceTo><relationshipLabel>Properties</relationshipLabel><relationshipName>Properties</relationshipName><reparentableMasterDetail>true</reparentableMasterDetail><trackHistory>true</trackHistory><type>MasterDetail</type><writeRequiresMasterRead>false</writeRequiresMasterRead></CustomField>