force-app/main/default/objects/Property__c/fields/Name__c.field-meta.xml
<CustomField><fullName>Name__c</fullName><description>Public title for the property listing.</description><externalId>false</externalId><inlineHelpText>Use a clear listing title shown on the public website.</inlineHelpText><label>Name</label><length>255</length><required>true</required><trackHistory>true</trackHistory><type>Text</type><unique>false</unique></CustomField>