force-app/main/default/objects/Property__c/fields/Prerequisites__c.field-meta.xml
<CustomField><fullName>Prerequisites__c</fullName><defaultValue>false</defaultValue><description>Confirms operational prerequisites are completed.</description><inlineHelpText>This must be checked before a property can be created or associated with a realtor.</inlineHelpText><label>Prerequisites</label><trackHistory>true</trackHistory><type>Checkbox</type></CustomField>