force-app/main/default/objects/Property__c/fields/Price__c.field-meta.xml
<CustomField><fullName>Price__c</fullName><description>Public listing price.</description><inlineHelpText>Used by the public platform for price filtering and display.</inlineHelpText><label>Price</label><precision>18</precision><required>false</required><scale>2</scale><trackHistory>true</trackHistory><type>Currency</type></CustomField>