force-app/main/default/objects/Property__c/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <description>Commercial intent of this property listing.</description>
    <inlineHelpText>Used for public filters and validation.</inlineHelpText>
    <label>Property Type</label>
    <type>Picklist</type>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted>
        <value><fullName>Rent</fullName><default>true</default><label>Rent</label></value>
        <value><fullName>Sell</fullName><default>false</default><label>Sell</label></value>
        <value><fullName>Daily Rent</fullName><default>false</default><label>Daily Rent</label></value>
    </valueSetDefinition></valueSet>
</CustomField>