force-app/main/default/objects/Property__c/fields/Public_Listing__c.field-meta.xml
<CustomField><fullName>Public_Listing__c</fullName><defaultValue>false</defaultValue><description>Controls whether this property is available to public APIs.</description><inlineHelpText>Only checked records are returned to the public listing API.</inlineHelpText><label>Public Listing</label><trackHistory>true</trackHistory><type>Checkbox</type></CustomField>