force-app/main/default/objects/Property__c/fields/Recurring__c.field-meta.xml
<CustomField><fullName>Recurring__c</fullName><defaultValue>false</defaultValue><description>Indicates the property listing or visit schedule repeats.</description><inlineHelpText>Frequency is required only when recurring is checked.</inlineHelpText><label>Recurring?</label><trackHistory>true</trackHistory><type>Checkbox</type></CustomField>