force-app/main/default/objects/Property__c/fields/Start_Date_Time__c.field-meta.xml
<CustomField><fullName>Start_Date_Time__c</fullName><description>Listing or appointment availability start date/time.</description><inlineHelpText>Required start date/time for public and operational scheduling.</inlineHelpText><label>Start Date/Time</label><required>true</required><trackHistory>true</trackHistory><type>DateTime</type></CustomField>