force-app/main/default/objects/Property__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Operational status for this property.</description>
    <inlineHelpText>Only prepared or in-progress public listings should be exposed externally.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted>
        <value><fullName>Prepared</fullName><default>true</default><label>Prepared</label></value>
        <value><fullName>In Progress</fullName><default>false</default><label>In Progress</label></value>
        <value><fullName>Completed</fullName><default>false</default><label>Completed</label></value>
        <value><fullName>Postponed</fullName><default>false</default><label>Postponed</label></value>
        <value><fullName>Canceled</fullName><default>false</default><label>Canceled</label></value>
    </valueSetDefinition></valueSet>
</CustomField>