force-app/main/default/objects/Property__c/validationRules/End_After_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>End_After_Start</fullName>
    <active>true</active>
    <description>End date/time must be at least one day after start date/time.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(End_Date_Time__c)), End_Date_Time__c &lt; Start_Date_Time__c + 1)</errorConditionFormula>
    <errorMessage>End Date/Time must be at least one day after Start Date/Time.</errorMessage>
</ValidationRule>