force-app/main/default/objects/Property__c/validationRules/Prerequisites_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Prerequisites_Required</fullName>
    <active>true</active>
    <description>Property cannot be saved without prerequisites confirmation.</description>
    <errorConditionFormula>NOT(Prerequisites__c)</errorConditionFormula>
    <errorMessage>Prerequisites must be checked before saving a property.</errorMessage>
</ValidationRule>