force-app/main/default/objects/Property__c/validationRules/Recurring_Frequency_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Recurring_Frequency_Required</fullName>
    <active>true</active>
    <description>Frequency must match the recurring flag.</description>
    <errorConditionFormula>OR(AND(Recurring__c, ISBLANK(TEXT(Frequency__c))), AND(NOT(Recurring__c), NOT(ISBLANK(TEXT(Frequency__c)))))</errorConditionFormula>
    <errorMessage>Select Frequency only when Recurring is checked.</errorMessage>
</ValidationRule>