force-app/main/default/objects/Property__c/validationRules/Sell_Requires_Location.validationRule-meta.xml
<ValidationRule>
    <fullName>Sell_Requires_Location</fullName>
    <active>true</active>
    <description>Sell properties must have a location.</description>
    <errorConditionFormula>AND(ISPICKVAL(Property_Type__c, "Sell"), ISBLANK(Location__c))</errorConditionFormula>
    <errorMessage>Select Location when Property Type is Sell.</errorMessage>
</ValidationRule>